--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ env_logger = "0.10"
 fraction = "0.12"
 log = "0.4"
 
+custom_error = "1.9"
+thiserror = "1.0"
+
 musical-note = "0.1"
 
 [patch.crates-io]
