--- a/rea-score/Cargo.toml
+++ b/rea-score/Cargo.toml
@@ -17,6 +17,8 @@ env_logger = {workspace = true}
 fraction = {workspace = true}
 log = {workspace = true}
 
+thiserror = {workspace = true}
+
 # egui = "0.19"
 # egui_glow = { version = "0.19", optional = true }
 # keyboard-types = { version = "0.6.1", default-features = false }
