--- a/test/Cargo.toml
+++ b/test/Cargo.toml
@@ -8,11 +8,10 @@ version = "0.1.0"
 env_logger = {workspace = true}
 log = {workspace = true}
 rea-rs = {workspace = true}
+rea-rs-low = {workspace = true}
+rea-rs-macros = {workspace = true}
+rea-rs-test = {workspace = true}
 rea-score = {path = "../rea-score"}
-reaper-low = {workspace = true}
-reaper-macros = {workspace = true}
-reaper-medium = {workspace = true}
-reaper-test = {git = "https://github.com/Levitanus/reaper-test"}
 
 fraction = {workspace = true}
 
